# cpp-aquachain

./: .gitmodules  .travis.yml  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  circle.yml  codecov.yml  snapcraft.yaml
aqua/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  MinerAux.h  main.cpp
aquahey/: CMakeLists.txt  KeyAux.h  main.cpp
aquavm/: CMakeLists.txt  main.cpp
cmake/: EthCheckCXXCompilerFlag.cmake  EthCompilerSettings.cmake  EthDependencies.cmake  EthExecutableHelper.cmake  EthOptions.cmake  EthPolicy.cmake  EthUtils.cmake  UseMiniupnpc.cmake
doc/: Doxyfile  database_layout.rst  dependencies.rst  generating_tests.rst  snapshot_sync.rst  usingtestaqua.rst
homebrew/: INSTALL_RECEIPT.json  fix_homebrew_paths_in_standalone_zip.py  homebrew.mxcl.cpp-ethereum.plist  prepare_receipt.sh
libaquachain/: Account.cpp  Account.h  BasicGasPricer.cpp  BasicGasPricer.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainImporter.cpp  BlockChainImporter.h  BlockChainSync.cpp  BlockChainSync.h  BlockDetails.cpp  BlockDetails.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  ClientTest.cpp  ClientTest.h  CodeSizeCache.h  CommonNet.cpp  CommonNet.h  Defaults.cpp  Defaults.h  EthereumHost.cpp  EthereumHost.h  EthereumPeer.cpp  EthereumPeer.h  Executive.cpp  Executive.h  ExtVM.cpp  ExtVM.h  GasPricer.cpp  GasPricer.h  (+30 more)
libaquacore/: Common.cpp  (+22 more)
libethash/: CMakeLists.txt  ethash.h  fnv.h  internal.c  internal.h  io.c  io_win32.c  mmap.h
(+308 files in other folders)
